# ferret

./: .gitignore  .gitmodules  .mailmap  .previous_test_results.json  2D_tests.i  3D_test_FE-comp.i  3D_test_FE.i  3D_test_FE_analyzerdofmap.json  6_PTO_STO_Pole_full-0.i  7_PTO_STO_Pole-0.i  80_single_sphere_3_short.i  80_single_sphere_6_short-gamg_vac.i  80_single_sphere_8_short-asm1.i  80_single_sphere_8_short-asm2.i  80_single_sphere_8_short-asm3.i  80_single_sphere_8_short-asm4.i  80_single_sphere_8_short-asm5.i  80_single_sphere_8_short-asm6.i  80_single_sphere_8_short-asm7.i  80_single_sphere_8_short-gamg.i  80_single_sphere_8_short-hyperboomer.i  80_single_sphere_8_short.i  BFO_P-A-u_PBC_rigid.i  BFO_P-A-u_PBC_rigid_w_global.i  BTO_coupling_new_comp.i  BTOepitaxy_test1.i  BTOfilm_large_ref.i  BTOfilm_large_ref_gcoeff.i  BT_sphere_refract.i  BT_sphere_refract_gcoeff.i  ConversePiezoelectrictest.i  Diffusion_checkJacobianTestBC.i  Diffusion_checkJacobianTestBF.i  Eigenstrain_Test.i  Elastic_noFE_Steady.i  Elastic_noFE_Transient.i  FeCrCo_elastic_uncoupled.i  HCP_grains_elastic_test.i  JustFE_fullFalse.i  JustFE_fullTrue.i  (+533 more)
contrib/scalfmm/: CMakeLists.txt  Licence.txt  NEWS.txt  README.txt  ScalFMMConfig.cmake.in  TODO.txt  Validation.txt  paraviewscript.py
contrib/scalfmm/Addons/CKernelApi/: CMakeLists.txt
contrib/scalfmm/Addons/FmmApi/: CMakeLists.txt
contrib/scalfmm/CMakeModules/: CodeCoverage.cmake  GetCpuInfos.cmake  checkAVX2pe.cpp  checkAVXpe.cpp  checkSSEpe.cpp  compileTestAvx2.cpp  compileTestIntel.cpp  compileTestSse.cpp  gcovr  getCpuInfos.cpp
contrib/scalfmm/CMakeModules/morse/: AuxilaryFlags.cmake  ColorizeMessage.cmake  FindHeadersAndLibs.cmake  MorseInit.cmake  ParseArguments.cmake  PrintFindStatus.cmake  Ressources.cmake  RulesPrecisions.cmake
contrib/scalfmm/Data/: ResultCompareKernels.txt  periodicCube20000.bfma  test20k.bin.fma.single  test20k.fma  test20k.tsm.fma  testMortonIndex.txt  unitCubeXYZQ100.bfma  unitCubeXYZQ20k.bfma  unitCubeXYZQ20k.fma
contrib/scalfmm/Data/UTest/: Direct.bin.fma.double  Direct.bin.fma.single  DirectDouble.bfma  DirectPer2Double.bfma  SphericalPrevious.data.simgle  dataDirect250-Per2.bfma  unitCubeRef20kDouble.bfma
contrib/scalfmm/Doc/: CMakeLists.txt  Doxyfile.in  Mic.txt
contrib/scalfmm/Doc/Site_dox/: FAQ.dox  FContact.dox  FDownload.dox  FExamples.dox  FLicense.dox  FP2P.dox  FPeriodic.dox  FProgrammingRules.dox  FQuick.dox  MainPage.dox
contrib/scalfmm/Examples/: CMakeLists.txt  ChebyshevInterpolationFMM.cpp  ChebyshevInterpolationMPIFMM.cpp  ChebyshevInterpolationMPIFMMSplit.cpp  DirectComputation.cpp  RotationFMM.cpp  RotationMPIFMM.cpp  changeFmaFormat.cpp  generateDistributions.cpp  statisticsOnOctree.cpp
contrib/scalfmm/Src/: CMakeLists.txt  ScalFmmConfig.h.cmake
contrib/scalfmm/Src/Arranger/: FAbstractMover.hpp  FArrangerPeriodic.hpp  FOctreeArranger.hpp  FOctreeArrangerProc.hpp  FParticleTypedIndexedMover.hpp
contrib/scalfmm/Src/BalanceTree/: FAbstractBalanceAlgorithm.hpp  FEqualize.hpp  FLeafBalance.hpp  FParticlesBalance.hpp
contrib/scalfmm/Src/Components/: FAbstractCell.hpp  FAbstractKernels.hpp  FAbstractLeaf.hpp  FAbstractParticleContainer.hpp  FAbstractSendable.hpp  FAbstractSerializable.hpp  FBasicCell.hpp  FBasicKernels.hpp  FBasicParticleContainer.hpp  FFmaParticleContainer.hpp  FParticleType.hpp  FSimpleLeaf.hpp  FTestCell.hpp  FTestKernels.hpp  FTestParticleContainer.hpp  FTypedLeaf.hpp
contrib/scalfmm/Src/Containers/: FAbstractBuffer.hpp  FBlockAllocator.hpp  FBoolArray.hpp  FBufferReader.hpp  FList.hpp  (+9 more)
contrib/scalfmm/Tests/: CMakeLists.txt
contrib/scalfmm/UTests/: CMakeLists.txt  FUKernelTester.hpp  FUTester.hpp  utestAlgorithmBuilder.cpp  utestAlignedMemory.cpp  utestBoolArray.cpp  utestBuffer.cpp  utestChebyshev.cpp  utestChebyshevDirectPeriodic.cpp  utestChebyshevDirectTsm.cpp  utestChebyshevMpi.cpp  utestChebyshevThread.cpp  utestFmmAlgorithmProc.cpp  utestList.cpp  utestListBlockAllocator.cpp  utestMorton.cpp  utestMpiBitonic.cpp  utestMpiQs.cpp  utestMpiTreeBuilder.cpp  utestNeighborIndexes.cpp  utestOctree.cpp  utestP2PExclusion.cpp  utestQuicksort.cpp  utestRotation.cpp  utestRotationDirectSeveralTime.cpp  utestRotationDirectTsm.cpp  utestRotationThread.cpp  utestSpherical.cpp  utestSphericalBlasAlgorithm.cpp  utestSphericalDirect.cpp  utestSphericalWithPrevious.cpp  utestTest.cpp  utestVector.cpp
scripts/: CMakeLists.txt  PTOSTO6_hysteresis_test  PTObench1asm_SLURM  PTObench3_PBS  PTOsphere-1  PTOsphere-10  PTOsphere-12  PTOsphere-14  PTOsphere-15  PTOsphere-16  PTOsphere-18  PTOsphere-22  PTOsphere-23  PTOsphere-24  PTOsphere-26  PTOsphere-27  PTOsphere-33  PTOsphere-5  PTOsphere-6  PTOsphere-8  PTOsphere-test  PZT_test  PbTiO3Values.nb  RT_PTOphaseagg  blues_moose_profile  build_scalfmm  build_scalfmm_local  hornet_bash_config  notes  pbsgen.py  scriptforClusterComp1pc.m  scriptforClusterComp2pc.m  scriptforClusterTens1pc.m  scriptforClusterTens2pc.m  scriptforClusterUnstr.m  vacPTOsphere6  vacuum  vacuum12  vacuum2
scripts/sphereProject/: 80_single_sphere_10_short-gamg.i  80_single_sphere_10_short-gamg_vac.i  80_single_sphere_11_short-gamg.i  80_single_sphere_11_short-gamg_vac.i  80_single_sphere_12_short-gamg.i  80_single_sphere_12_short-gamg_vac.i  80_single_sphere_12_short.i  80_single_sphere_2-5_short-gamg.i  80_single_sphere_3_short-gamg.i  80_single_sphere_3_short-gamg_vac.i  80_single_sphere_3_short.i  80_single_sphere_4_short-gamg.i  80_single_sphere_4_short-gamg_vac.i  80_single_sphere_5_short-gamg.i  80_single_sphere_5_short-gamg_vac.i  80_single_sphere_5_short.i  80_single_sphere_6_short-gamg.i  80_single_sphere_6_short-gamg_vac.i  80_single_sphere_7_short-gamg.i  80_single_sphere_7_short-gamg_vac.i  80_single_sphere_8_short-gamg.i  80_single_sphere_8_short-gamg_vac.i  80_single_sphere_9_short-gamg.i  80_single_sphere_9_short-gamg_vac.i  PTOsphere10  PTOsphere11  PTOsphere12  PTOsphere2-5  PTOsphere3  PTOsphere4  PTOsphere5  PTOsphere6  PTOsphere7  PTOsphere8  PTOsphere9  vacPTOsphere10  vacPTOsphere11  vacPTOsphere12  vacPTOsphere2-5  vacPTOsphere3  (+5 more)
(+5020 files in other folders)
